fixxed css height for non mobile view

--- a/client/src/assests/css/index.css
+++ b/client/src/assests/css/index.css
@@ -463,7 +463,8 @@ a {
 .container-project {
       border: 5px solid #92a3aa;
       margin: 5px;
-      transition: all 0.25s ease-out
+      transition: all 0.25s ease-out;
+      min-height: auto
   }
   }
 
