--- a/client/src/assests/css/modules/_container.pcss
+++ b/client/src/assests/css/modules/_container.pcss
@@ -29,6 +29,7 @@
       border: 5px solid #92a3aa;
       margin: 5px;
       transition: all 0.25s ease-out;
+      min-height: auto;
     }
     &:hover {
       @mixin atLarge {
